--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,12 @@
-# Python
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
-env/
-venv/
-.venv
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Development
-.pytest_cache/
-.coverage
-.tox/
-.cache
-nosetests.xml
-coverage.xml
-*.cover
+*.egg-info/
+dist/
+build/
 *.log
-
-# IDE
 .vscode/
 .idea/
-*.swp
-*.swo
-
-# OS
 .DS_Store
-Thumbs.db
-
-# Home Assistant
-*.db
-*.db-journal
-.storage/
-deps/
-tts/
-www/
-
-# Local development files
-requirements-dev.txt
