--- a/custom_components/tis_home_automation/manifest.json
+++ b/custom_components/tis_home_automation/manifest.json
@@ -11,6 +11,5 @@
   ],
   "config_flow": true,
   "integration_type": "hub",
-  "iot_class": "local_polling",
-  "quality_scale": "silver"
+  "iot_class": "local_polling"
 }
