--- a/.gitignore
+++ b/.gitignore
@@ -1,107 +1,42 @@
-# Byte-compiled / optimized / DLL files
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
 *.so
-
-# Distribution / packaging
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+env/
+venv/
+.venv
+pip-log.txt
+pip-delete-this-directory.txt
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
+# Development
+.pytest_cache/
 .coverage
-.coverage.*
+.tox/
 .cache
 nosetests.xml
 coverage.xml
 *.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
+*.log
 
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# IDEs
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
 
-# macOS
+# OS
 .DS_Store
-
-# Windows
 Thumbs.db
-ehthumbs.db
-Desktop.ini
 
 # Home Assistant
-*.log
 *.db
-*.db-shm
-*.db-wal
+*.db-journal
+.storage/
+deps/
+tts/
+www/
 
-# Testing and debugging files
-test_*.py
-debug_*.py
-*_test.py
-*_debug.py
-simple_*.py
-network_debug.py
-simple_udp_sniffer*.py
-simple_broadcast_test.py
-simple_discovery_test.py
-debug_discovery_packets.py
-compare_discovery.py
-
-# Development files
-*.orig
-*.backup
-*.tmp
-temp/
-tmp/
-
-# Documentation build
-docs/_build/
-
-# Custom ignores for TIS integration development
-rs485_tis_gui_tester.py
-tis_protocol_helper.py
-DISCOVERY_TEST_GUIDE.md
-configuration_debug.yaml
+# Local development files
+requirements-dev.txt
