--- a/custom_components/tis_home_automation/manifest.json
+++ b/custom_components/tis_home_automation/manifest.json
@@ -11,5 +11,6 @@
   ],
   "config_flow": true,
   "integration_type": "hub",
-  "iot_class": "local_polling"
+  "iot_class": "local_polling",
+  "quality_scale": "silver"
 }
